--- a/role/grafana-install/tasks/install.yml
+++ b/role/grafana-install/tasks/install.yml
@@ -1,8 +1,14 @@
-- name: Deploy Grafana chart on 5.0.12 with values loaded from template
+- name: Adding grafana helm repo
+  kubernetes.core.helm_repository:
+    repo_name: "{{ grafana.repoName }}"
+    repo_url: "{{ grafana.repoUrl}}"
+
+- name: "Deploy Grafana chart {{ grafana.chartVersion }}  with values loaded from template"
   kubernetes.core.helm:
-    name: grafana
-    release_namespace: monitoring
+    name: "{{ grafana.releaseName }}"
+    release_namespace: "{{ namespaceName }}"
     create_namespace: true
-    chart_ref: grafana/grafana
-    chart_version: 6.32.6
-    values: "{{ lookup('template', 'somefile.yaml') | from_yaml }}"
+    update_repo_cache: True
+    chart_ref: "{{ grafana.chartName }}"
+    chart_version: "{{ grafana.chartVersion }}"
+    values: "{{ lookup('template', 'grafana-values.yaml') | from_yaml }}"
