--- a/role/prometheus-install/templates/prometheus-values.yaml
+++ b/role/prometheus-install/templates/prometheus-values.yaml
@@ -30,7 +30,7 @@ serviceAccounts:
 alertmanager:
   ## If false, alertmanager will not be installed
   ##
-  enabled: false
+  enabled: {{ prometheus.nodeExporterEnabled }}
 
   ## Use a ClusterRole (and ClusterRoleBinding)
   ## - If set to false - we define a Role and RoleBinding in the defined namespaces ONLY
@@ -461,7 +461,7 @@ configmapReload:
 kubeStateMetrics:
   ## If false, kube-state-metrics sub-chart will not be installed
   ##
-  enabled: true
+  enabled: {{ prometheus.kubeStatemetricsEnabled }}
 
 ## kube-state-metrics sub-chart configurable values
 ## Please see https://github.com/prometheus-community/helm-charts/tree/main/charts/kube-state-metrics
@@ -669,8 +669,8 @@ server:
   ## Prometheus server container image
   ##
   image:
-    repository: quay.io/prometheus/prometheus
-    tag: v2.34.0
+    repository: {{ prometheus.imageRepo }}
+    tag: {{ prometheus.imageTag }}
     pullPolicy: IfNotPresent
 
   ## prometheus server priorityClassName
@@ -892,7 +892,7 @@ server:
     ## If true, Prometheus server will create/use a Persistent Volume Claim
     ## If false, use emptyDir
     ##
-    enabled: true
+    enabled: {{ prometheus.persistentVolumeEnabled }}
 
     ## Prometheus server data Persistent Volume access modes
     ## Must match those of existing PV or dynamic provisioner
@@ -916,7 +916,7 @@ server:
 
     ## Prometheus server data Persistent Volume size
     ##
-    size: 8Gi
+    size: {{ prometheus.size }}
 
     ## Prometheus server data Persistent Volume Storage Class
     ## If defined, storageClassName: <storageClass>
@@ -1037,11 +1037,11 @@ server:
   ##
   resources:
     limits:
-      cpu: 2
-      memory: 4Gi
+      cpu: {{ prometheus.cpuLimit }}
+      memory: {{ prometheus.memoryLimit }}
     requests:
-      cpu: 500m
-      memory: 512Mi
+      cpu: {{ prometheus.cpuRequest }}
+      memory: {{ prometheus.memoryRequest }}
 
   # Required for use in managed kubernetes clusters (such as AWS EKS) with custom CNI (such as calico),
   # because control-plane managed by AWS cannot communicate with pods' IP CIDR and admission webhooks are not working
@@ -1100,8 +1100,8 @@ server:
     loadBalancerSourceRanges: []
     servicePort: 80
     sessionAffinity: None
-    type: NodePort
-    nodePort: 32002
+    type: {{ prometheus.svcType }}
+    # nodePort: 32002
 
     ## Enable gRPC port on service to allow auto discovery with thanos-querier
     gRPC:
