--- a/role/otel-collector-operator-install/templates/otel-collector-opt-values.yaml
+++ b/role/otel-collector-operator-install/templates/otel-collector-opt-values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: {{ otelOperator.replicas }}
 
 ## Provide a name in place of opentelemetry-operator.
 ##
@@ -12,18 +12,18 @@ nameOverride: ""
 ##
 manager:
   image:
-    repository: ghcr.io/open-telemetry/opentelemetry-operator/opentelemetry-operator
-    tag: v0.51.0
+    repository: {{ otelOperator.imageRepo }}
+    tag: {{ otelOperator.imageTag }}
   collectorImage:
     repository:
     tag:
   resources:
     limits:
-      cpu: 100m
-      memory: 128Mi
+      cpu: {{ otelOperator.cpuLimit }}
+      memory: {{ otelOperator.memoryLimit }}
     requests:
-      cpu: 100m
-      memory: 64Mi
+      cpu: {{ otelOperator.cpuRequest }}
+      memory: {{ otelOperator.memoryRequest }}
   ## Adds additional environment variables
   ## e.g ENV_VAR: env_value
   env:
@@ -32,15 +32,15 @@ manager:
 ##
 kubeRBACProxy:
   image:
-    repository: gcr.io/kubebuilder/kube-rbac-proxy
-    tag: v0.8.0
+    repository: {{ otelOperator.kubeRBACProxy.imageRepo }}
+    tag: {{ otelOperator.kubeRBACProxy.imageTag }}
   resources:
     limits:
-      cpu: 500m
-      memory: 128Mi
+      cpu: {{ otelOperator.kubeRBACProxy.cpuLimit }}
+      memory: {{ otelOperator.kubeRBACProxy.memoryLimit }}
     requests:
-      cpu: 5m
-      memory: 64Mi
+      cpu: {{ otelOperator.kubeRBACProxy.cpuRequest }}
+      memory: {{ otelOperator.kubeRBACProxy.memoryRequest }}
 
 ## Admission webhooks make sure only requests with correctly formatted rules will get into the Operator.
 ##
@@ -51,7 +51,7 @@ admissionWebhooks:
   ## Provide the issuer kind and name to do the cert auth job.
   ## By default, OpenTelemetry Operator will use self-signer issuer.
   certManager:
-    enabled: true
+    enabled: {{ otelOperator.certManagerEnabled }}
     issuerRef: {}
       # kind:
       # name:
