--- a/role/prometheus-install/tasks/install.yml
+++ b/role/prometheus-install/tasks/install.yml
@@ -1,7 +1,7 @@
 - name: Adding prometheus helm repo
   kubernetes.core.helm_repository:
     repo_name: "{{ prometheus.chartRepoName }}"
-    repo_url: "{{ grafana.chartRepoUrl}}"
+    repo_url: "{{ prometheus.chartRepoUrl }}"
 
 - name: "Deploy prometheus chart {{ prometheus.chartVersion }}  with values loaded from template"
   kubernetes.core.helm:
@@ -11,4 +11,6 @@
     update_repo_cache: True
     chart_ref: "{{ prometheus.chartName }}"
     chart_version: "{{ prometheus.chartVersion }}"
-    values: "{{ lookup('template', 'prometheus-values.yaml') | from_yaml }}"
+#    values: "{{ lookup('template', 'prometheus-values.yaml') | from_yaml }}"
+    values_files:
+      - "{{ role_path }}/files/prometheus-values.yaml"    
